results/SVCOMP/conversational/log-ExSymExeI2D-2024_03_12_18_53_30.txt
class Main {

  //@ requires x > 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public static boolean main(int x) {
    x = x > 0 ? x % 10 : -(x % 10);

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x > 0;
  //@ ensures \result ==> res > 0;
  //@ ensures !\result ==> res <= 0;
  public boolean test(int x) {
    double res = (double) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:14: error: cannot find symbol
  //@ ensures \result ==> res > 0;
                          ^
  symbol:   variable res
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:15: error: cannot find symbol
  //@ ensures !\result ==> res <= 0;
                           ^
  symbol:   variable res
  location: class Main
2 errors

class Main {

  //@ requires x > 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public static boolean main(int x) {
    x = x > 0 ? x % 10 : -(x % 10);

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x > 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    double res = (double) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:10: verify: The prover cannot establish an assertion (Precondition: /home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:16:) in method main
    return inst.test(x);
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:16: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:10:
  public boolean test(int x) {
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:13: verify: Precondition conjunct is false: x > 0
  //@ requires x > 0;
                 ^
3 verification failures

class Main {

  //@ requires x != 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public static boolean main(int x) {
    x = x > 0 ? x % 10 : -(x % 10);

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x != 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    double res = (double) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:10: verify: The prover cannot establish an assertion (Precondition: /home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:16:) in method main
    return inst.test(x);
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:16: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:10:
  public boolean test(int x) {
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:13: verify: Precondition conjunct is false: x != 0
  //@ requires x != 0;
                 ^
3 verification failures

class Main {

  //@ requires x > 0 || x < 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public static boolean main(int x) {
    x = x > 0 ? x % 10 : -(x % 10);

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires x > 0 || x < 0;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    double res = (double) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:10: verify: The prover cannot establish an assertion (Precondition: /home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:16:) in method main
    return inst.test(x);
                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:16: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:10:
  public boolean test(int x) {
                 ^
/home/max/Documents/JMLGPT/tmp/ExSymExeI2D.java:13: verify: Precondition conjunct is false: x > 0 || x < 0
  //@ requires x > 0 || x < 0;
                     ^
3 verification failures

class Main {

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public static boolean main(int x) {
    x = x > 0 ? x % 10 : -(x % 10);

    Main inst = new Main();
    return inst.test(x);
  }

  //@ requires true;
  //@ ensures \result ==> x > 0;
  //@ ensures !\result ==> x <= 0;
  public boolean test(int x) {
    double res = (double) ++x;
    if (res > 0) System.out.println("x >0");
    else {
      return false;
    }
    return true;
  }
}
